--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -2,16 +2,20 @@
 
 #navbar > * {
     display: inline-block;
+    /* font-family: 'Kaushan Script', 'cursive'; */
 }
 
 h1 {
     color: #054C3C;
     margin: 0 25px 0 100px;
     cursor: pointer;
+    
+    
 }
 
 h1 > span {
     color: #F32323;
+    font-family: 'Kaushan Script', 'cursive';
 }
 
 #search-input {
@@ -39,11 +43,11 @@ h1 > span {
     height: 100%;
     border: none;
     background-color: inherit;
-    padding: 0 28px;
+    padding: 0 38px;
     font-size: 16px;
     font-weight: 600;
     cursor: pointer;
-    margin: auto 10px;
+    /* margin: auto 10px; */
 }
 .nav-btn:hover {
     background-color: #bbd7f7;
