--- a/public/styles.css
+++ b/public/styles.css
@@ -2,3 +2,12 @@
 body, p, div, ul, ol, li, span, strong, h1, h2,h3, img{
     margin:0; padding:0;
 }
+
+
+body {
+    font-family: 'Source Serif Pro', serif;
+}
+
+h1, h2 {
+    font-family: 'Domine', serif;
+}
