--- a/src/components/Canvas/Canvas.css
+++ b/src/components/Canvas/Canvas.css
@@ -1,11 +1,18 @@
 
 #canvas {
     background-color: #EFF4FA;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     max-width: 100%;
     overflow: auto;
-    opacity: 0.8;
+    opacity: 0.9;
+    background-image: url("../../../public/images/background2.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+}
+#canvas::-webkit-scrollbar {
+    width: 0;  /* Remove scrollbar space */
 }
 
 #ask-btn {
@@ -68,8 +75,3 @@
     justify-content: space-evenly;
 }
 
-#background-img {
-    position: absolute;
-    bottom: 0;
-    z-index: -1;
-}
