--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -6,12 +6,13 @@
     width: 550px;
     margin: 20px auto 30px auto;
     border: 1px solid grey;
+    cursor: pointer;
 }
 
 .card-heading {
     display: flex;
     flex-direction: row;
-    padding: 15px 0 0 20px;
+    padding: 15px 0 0 20px; 
 }
 
 .card-img {
