--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -7,7 +7,7 @@
 
 h1 {
     color: #054C3C;
-    margin: 0 25px 0 100px;
+    margin: 0 3% 0 10%;
     cursor: pointer;
     
     
@@ -20,8 +20,8 @@ h1 > span {
 
 #search-input {
     height: 25px;
-    width: 200px;
-    margin: 0 50px 0 25px;
+    width: 95%;
+    margin: 0 10% 0 5%; 
     border-radius: 13px;
     border: 2px solid gray;
 }
@@ -43,7 +43,7 @@ h1 > span {
     height: 100%;
     border: none;
     background-color: inherit;
-    padding: 0 38px;
+    padding: 0 3%;
     font-size: 16px;
     font-weight: 600;
     cursor: pointer;
@@ -64,7 +64,7 @@ h1 > span {
     border-radius: 6px;
     cursor: pointer;
     width: 100px;
-    margin-left: 200px;
+    margin: 0 auto 0 auto;
 }
 .login-btn:hover {
     background-color: #1a64bf;
@@ -78,4 +78,69 @@ h1 > span {
 
 .icon-div > span {
     padding-left: 5px;
+}
+
+#search-icon {
+    display: none;
+}
+
+#menu-icon {
+    display: none;
+}
+
+@media only screen and (max-width:768px) {
+
+    #navbar {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .nav-btn {
+        top: 15px;
+        background-color: transparent;
+        padding-top: 10px; 
+    }
+
+    #menu-icon {
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+
+    #search-input {
+        border-radius: 0;
+        position: absolute;
+        top: 0;
+        width: 100%;
+        padding: 0;
+        margin: 0;
+        height: 60px;
+    }
+
+    .hide-search {
+        display: none;
+    }
+    .show-search {
+        display: block;
+    }
+
+    #search-icon {
+        display: block;
+        position: absolute;
+        right: 0;
+        top: 0;
+        cursor: pointer;
+    }
+
+    .slide-bar {
+        padding: 20px 0 20px 0;
+    }
+
+}
+
+@media only screen and (max-width:1050px) and (min-width:768px) {
+    .icon-inner-div {
+        display: none;
+    }
 }
